# docs/swagger.json
@@ -89,6 +89,236 @@
 					}
 				}
 			}
+		},
+		"/api/products/{id}/reviews": {
+			"get": {
+				"description": "Получает все отзывы о продукте по его ID",
+				"consumes": ["application/json"],
+				"produces": ["application/json"],
+				"tags": ["reviews"],
+				"summary": "Получение списка отзывов о продукте",
+				"parameters": [
+					{
+						"type": "integer",
+						"description": "Product ID",
+						"name": "id",
+						"in": "path",
+						"required": true
+					}
+				],
+				"responses": {
+					"200": {
+						"description": "Список отзывов",
+						"schema": {
+							"type": "array",
+							"items": {
+								"$ref": "#/definitions/entity.ProductReview"
+							}
+						}
+					},
+					"400": {
+						"description": "Некорректный ID продукта",
+						"schema": {
+							"type": "object",
+							"additionalProperties": {
+								"type": "string"
+							}
+						}
+					},
+					"500": {
+						"description": "Внутренняя ошибка сервера",
+						"schema": {
+							"type": "object",
+							"additionalProperties": {
+								"type": "string"
+							}
+						}
+					}
+				}
+			},
+			"post": {
+				"security": [
+					{
+						"BearerAuth": []
+					}
+				],
+				"description": "Добавляет новый отзыв о продукте",
+				"consumes": ["application/json"],
+				"produces": ["application/json"],
+				"tags": ["reviews"],
+				"summary": "Добавление отзыва о продукте",
+				"parameters": [
+					{
+						"type": "integer",
+						"description": "Product ID",
+						"name": "id",
+						"in": "path",
+						"required": true
+					},
+					{
+						"description": "Данные отзыва",
+						"name": "review",
+						"in": "body",
+						"required": true,
+						"schema": {
+							"$ref": "#/definitions/dto.AddReviewDTO"
+						}
+					}
+				],
+				"responses": {
+					"201": {
+						"description": "Отзыв успешно добавлен",
+						"schema": {
+							"type": "object",
+							"additionalProperties": {
+								"type": "string"
+							}
+						}
+					},
+					"400": {
+						"description": "Некорректный ввод",
+						"schema": {
+							"type": "object",
+							"additionalProperties": {
+								"type": "string"
+							}
+						}
+					},
+					"401": {
+						"description": "Неавторизованный доступ",
+						"schema": {
+							"type": "object",
+							"additionalProperties": {
+								"type": "string"
+							}
+						}
+					},
+					"500": {
+						"description": "Внутренняя ошибка сервера",
+						"schema": {
+							"type": "object",
+							"additionalProperties": {
+								"type": "string"
+							}
+						}
+					}
+				}
+			}
+		},
+		"/api/sellers/{id}/reviews": {
+			"get": {
+				"description": "Получает все отзывы о продавце по его ID",
+				"consumes": ["application/json"],
+				"produces": ["application/json"],
+				"tags": ["reviews"],
+				"summary": "Получение списка отзывов о продавце",
+				"parameters": [
+					{
+						"type": "integer",
+						"description": "Seller ID",
+						"name": "id",
+						"in": "path",
+						"required": true
+					}
+				],
+				"responses": {
+					"200": {
+						"description": "Список отзывов",
+						"schema": {
+							"type": "array",
+							"items": {
+								"$ref": "#/definitions/entity.SellerReview"
+							}
+						}
+					},
+					"400": {
+						"description": "Некорректный ID продавца",
+						"schema": {
+							"type": "object",
+							"additionalProperties": {
+								"type": "string"
+							}
+						}
+					},
+					"500": {
+						"description": "Внутренняя ошибка сервера",
+						"schema": {
+							"type": "object",
+							"additionalProperties": {
+								"type": "string"
+							}
+						}
+					}
+				}
+			},
+			"post": {
+				"security": [
+					{
+						"BearerAuth": []
+					}
+				],
+				"description": "Добавляет новый отзыв о продавце",
+				"consumes": ["application/json"],
+				"produces": ["application/json"],
+				"tags": ["reviews"],
+				"summary": "Добавление отзыва о продавце",
+				"parameters": [
+					{
+						"type": "integer",
+						"description": "Seller ID",
+						"name": "id",
+						"in": "path",
+						"required": true
+					},
+					{
+						"description": "Данные отзыва",
+						"name": "review",
+						"in": "body",
+						"required": true,
+						"schema": {
+							"$ref": "#/definitions/dto.AddReviewDTO"
+						}
+					}
+				],
+				"responses": {
+					"201": {
+						"description": "Отзыв успешно добавлен",
+						"schema": {
+							"type": "object",
+							"additionalProperties": {
+								"type": "string"
+							}
+						}
+					},
+					"400": {
+						"description": "Некорректный ввод",
+						"schema": {
+							"type": "object",
+							"additionalProperties": {
+								"type": "string"
+							}
+						}
+					},
+					"401": {
+						"description": "Неавторизованный доступ",
+						"schema": {
+							"type": "object",
+							"additionalProperties": {
+								"type": "string"
+							}
+						}
+					},
+					"500": {
+						"description": "Внутренняя ошибка сервера",
+						"schema": {
+							"type": "object",
+							"additionalProperties": {
+								"type": "string"
+							}
+						}
+					}
+				}
+			}
 		}
 	},
 	"definitions": {
@@ -120,6 +350,74 @@
 					"type": "string"
 				}
 			}
+		},
+		"dto.AddReviewDTO": {
+			"type": "object",
+			"required": ["rating", "review"],
+			"properties": {
+				"rating": {
+					"type": "integer",
+					"maximum": 5,
+					"minimum": 1
+				},
+				"review": {
+					"type": "string"
+				}
+			}
+		},
+		"entity.ProductReview": {
+			"type": "object",
+			"properties": {
+				"created_at": {
+					"type": "string"
+				},
+				"id": {
+					"type": "integer"
+				},
+				"product_id": {
+					"type": "integer"
+				},
+				"rating": {
+					"type": "integer"
+				},
+				"review": {
+					"type": "string"
+				},
+				"user_id": {
+					"type": "integer"
+				}
+			}
+		},
+		"entity.SellerReview": {
+			"type": "object",
+			"properties": {
+				"created_at": {
+					"type": "string"
+				},
+				"id": {
+					"type": "integer"
+				},
+				"rating": {
+					"type": "integer"
+				},
+				"review": {
+					"type": "string"
+				},
+				"seller_id": {
+					"type": "integer"
+				},
+				"user_id": {
+					"type": "integer"
+				}
+			}
+		}
+	},
+	"securityDefinitions": {
+		"BearerAuth": {
+			"description": "Bearer token for authentication. Format: \"Bearer \u003ctoken\u003e\"",
+			"type": "apiKey",
+			"name": "Authorization",
+			"in": "header"
 		}
 	}
 }
