# internal/handler/reviews/product_reviews.go
@@ -1,4 +1,4 @@
-package handler
+package reviews
 
 import (
 	"context"
@@ -12,22 +12,37 @@ import (
 )
 
 type ProductReviewsService interface {
-	AddReview(ctx context.Context, productID int, userID int, rating int, review string) error
+	AddReview(ctx context.Context, productID int, userID int, rating int, review string) (int, error)
 	GetReviewsByProductID(ctx context.Context, productID int) ([]entity.ProductReview, error)
 }
 
-type productReviewHandler struct {
+type ProductReviewsHandler struct {
 	prs    ProductReviewsService
 	logger *zap.Logger
 }
 
-func NewProductReviewHandler(prs ProductReviewsService, l *zap.Logger) *productReviewHandler {
-	return &productReviewHandler{
-		prs: prs, logger: l,
+func NewProductReviewHandler(prs ProductReviewsService, l *zap.Logger) *ProductReviewsHandler {
+	return &ProductReviewsHandler{
+		prs:    prs,
+		logger: l,
 	}
 }
 
-func (h *productReviewHandler) AddReview(c *gin.Context) {
+// AddReview godoc
+// @Summary Добавление отзыва о продукте
+// @Description Добавляет новый отзыв о продукте
+// @Tags reviews
+// @Accept json
+// @Produce json
+// @Param id path int true "Product ID"
+// @Param review body dto.AddReviewDTO true "Данные отзыва"
+// @Security BearerAuth
+// @Success 201 {object} map[string]string "Отзыв успешно добавлен"
+// @Failure 400 {object} map[string]string "Некорректный ввод"
+// @Failure 401 {object} map[string]string "Неавторизованный доступ"
+// @Failure 500 {object} map[string]string "Внутренняя ошибка сервера"
+// @Router /api/products/{id}/reviews [post]
+func (h *ProductReviewsHandler) AddReview(c *gin.Context) {
 	const op = "productReviewsHandler.AddReviews()"
 	log := h.logger.With(zap.String("op", op))
 
@@ -38,7 +53,7 @@ func (h *productReviewHandler) AddReview(c *gin.Context) {
 		return
 	}
 
-	var addReview = dto.AddReviewDTO
+	var addReview dto.AddReviewDTO
 	if err := c.ShouldBindJSON(&addReview); err != nil {
 		c.JSON(http.StatusBadRequest, gin.H{"error": "invalid input"})
 		log.Warn("Failed to bind JSON", zap.Error(err))
@@ -59,17 +74,28 @@ func (h *productReviewHandler) AddReview(c *gin.Context) {
 		return
 	}
 
-	err = h.prs.AddReview(c.Request.Context(), productID, uid, addReview.Rating, addReview.Review)
+	id, err := h.prs.AddReview(c.Request.Context(), productID, uid, addReview.Rating, addReview.Review)
 	if err != nil {
 		c.JSON(http.StatusInternalServerError, gin.H{"error": "failed to add review"})
-		log.Warn("Failed to add review", zap.Error(err))
+		log.Warn("Failed to add review", zap.Int("id: ", id), zap.Error(err))
 		return
 	}
 
 	c.JSON(http.StatusCreated, gin.H{"message": "review added successfully"})
 }
 
-func (h *productReviewHandler) GetReviews(c *gin.Context) {
+// GetReviews godoc
+// @Summary Получение списка отзывов о продукте
+// @Description Получает все отзывы о продукте по его ID
+// @Tags reviews
+// @Accept json
+// @Produce json
+// @Param id path int true "Product ID"
+// @Success 200 {array} entity.ProductReview "Список отзывов"
+// @Failure 400 {object} map[string]string "Некорректный ID продукта"
+// @Failure 500 {object} map[string]string "Внутренняя ошибка сервера"
+// @Router /api/products/{id}/reviews [get]
+func (h *ProductReviewsHandler) GetReviews(c *gin.Context) {
 	const op = "productReviewsHandler.GetReviews()"
 	log := h.logger.With(zap.String("op", op))
 
